Fix 246/custom scrollbar (#269)
* Refactor(index.css): add custom scrollbar

* Refactor(index.css): update scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -62,3 +62,25 @@ html,
 body {
   height: -webkit-fill-available;
 }
+
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+  scrollbar-width: auto;
+  scrollbar-color: #7a7a7a #ffffff;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #7a7a7a;
+  border-radius: 8px;
+  border: 3px solid #ffffff;
+}
